[package]
authors = ["Shaun Mangelsdorf <s.mangelsdorf@gmail.com>"]
build = "build.rs"
description = "A type-safe, heterogeneous collection with zero-cost add and borrow"
documentation = "https://docs.rs/borrow-bag"
homepage = "https://github.com/smangelsdorf/borrow-bag"
license = "MIT"
name = "borrow-bag"
readme = "readme.md"
repository = "https://github.com/smangelsdorf/borrow-bag"
version = "0.3.0"

[dependencies]

[build-dependencies]
skeptic = "0.9"

[dev-dependencies]
skeptic = "0.9"
